# alphafold3

./: .gitignore  CMakeLists.txt  README.seoklab.md  environment.yml  pyproject.toml  run_alphafold.py
src/alphafold3/: __init__.py  version.py
src/alphafold3/data/: pipeline.py
